src/styles/signup.css
/* ... */
@keyframes scale {
    0%{
        scale: 0.9;
    }
    100%{
        scale: 1;
    }
}
@keyframes spin {
    0%{
        rotate: 0deg;
    }
    100%{
        rotate: 360deg;
    }
}

.verification_status{
    display: flex;
    align-items: center;
    justify-content: center;
}

.verification_status p{
    text-align: center;
    color: #f8f6e0;
    font-weight: 400;
    font-size: 0.8em;
}

.service_provider p{
    font-size: 0.7em;
    color: #888;
    font-weight: 500;
    display: flex;
    align-items: center;
    gap: 6px;
}

.service_provider p img{
    width: 70px;
    height: auto;
    object-fit: contain;
    object-position: center;
}

form button[type="submit"]{
    width: var(--input-width);
    border: none;
    outline: none;
    cursor: pointer;
    touch-action: manipulation;
    -webkit-tap-highlight-color: transparent;
    user-select: none;
    position: relative;
    z-index: 10;
}

.haveanaccount{
    min-width: var(--input-width);
    color: var(--grey-clr);
    font-weight: 400;
    font-size: 0.9em;
    display: flex;
    align-items: center;
    gap: 6px;
}

.haveanaccount a{
    color: var(--text-accent);
    font-size: 1.1em;
}

form .errorMsg{
    width: var(--input-width);
    color: var(--danger-clr);
    font-size: 0.8em;
    font-weight: 400;
}

